[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4" }
comfy-table = "7.1.0"
serde = { version = "1.0.195", features = ['derive'] }
serde_json = "1.0.111"
